--- a/.github/workflows/action-demo.yml
+++ b/.github/workflows/action-demo.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ~/.m2/repository
-        key: ${{runner.os}}-m2-${{hashFiles("**/pom.xml")}}
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
-          ${{runner.os}}-m2-
+          ${{ runner.os }}-m2-
     - name: Run tests with Maven
       run: mvn -B test --file pom.xml
